Устранена проблема с разностью данных при многопоточной выгрузке. Устранено дублирование. Факторинг.