@@ -20,6 +20,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <ignite.version>2.15.0</ignite.version>
     </properties>
 
     <dependencies>
@@ -69,6 +70,16 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-core</artifactId>
+            <version>${ignite.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-spring</artifactId>
+            <version>${ignite.version}</version>
         </dependency>
     </dependencies>
 
@@ -123,17 +134,26 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>libs/</classpathPrefix>
-                            <mainClass>
-                                com.foreach.executable.ExecutableMavenJar
-                            </mainClass>
-                        </manifest>
-                    </archive>
+                    <argLine>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.io=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.math=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.sql/java.sql=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens=java.base/java.net=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
